--- a/src/SafetreeWorkerLibrary/SafetreeWorkerLibrary/SafetreeWorkerLibrary.fsproj
+++ b/src/SafetreeWorkerLibrary/SafetreeWorkerLibrary/SafetreeWorkerLibrary.fsproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Types.fs" />
+    <Compile Include="Web.fs" />
     <Compile Include="Student.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
