--- a/src/Test/packages.config
+++ b/src/Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharp.Data" version="2.2.5" targetFramework="net452" />
+  <package id="FSharp.Text.RegexProvider" version="0.0.7" targetFramework="net452" />
 </packages>
